# mics-r4

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Taskfile.yml  lefthook.yaml
.github/workflows/: ci.yaml  release.yaml
include/: chainhash.h  hashtable.h  loadmnist.h  openhash.h
src/: chainhash.cc  hashtable.cc  loadmnist.cc  main.cc  openhash.cc
tests/: chainhash_test.cc  hashtable_test.cc  loadmnist_test.cc  openhash_test.cc
tools/mnistview/: CMakeLists.txt  main.cc
